refactor(app): hilt